Fixed footer issues on mobile devices

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -50,9 +50,6 @@
 
         @include media-breakpoint-between(xs, lg) {
             margin: 0 auto;
-        }
-
-        @include media-breakpoint-between(xs, sm) {
             width: 100%;
         }
 
